--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -458,7 +458,7 @@ section {
     inset: 0;
     padding: 50px 0 10px 0;
     margin: 0;
-    background: rgba(0, 0, 0, 0.8);
+    background: var(--color-secondary);
     overflow-y: auto;
     transition: 0.3s;
     z-index: 9998;
@@ -500,7 +500,7 @@ section {
     padding: 10px 0;
     margin: 10px 20px;
     transition: all 0.5s ease-in-out;
-    border: 1px solid #222428;
+    border: 1px solid var(--color-primary);
   }
 
   .navbar .dropdown>.dropdown-active,
@@ -1931,7 +1931,7 @@ section {
 .hero .info .btn-get-started {
   font-family: var(--font-primary);
   font-weight: 500;
-  font-size: 16px;
+  font-size: 20px;
   letter-spacing: 1px;
   display: inline-block;
   padding: 12px 40px;
